# python-project-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
