[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "project-template"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.7.3"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
pytest-cov = "2.10.1"

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.repo_name}} tests/ --cov-fail-under=100 --cov-report html"
testpaths = "tests/"

[tool.black]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
