[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "project-template"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.7.3"
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "1.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
pytest-cov = "2.10.1"

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.repo_name}} tests/ --cov-fail-under=100 --cov-report html"
testpaths = "tests/"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.black]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
