[project]
authors = [{email="Your Name <you@example.com>"}]
description = ""
name = "project-template"
version = "0.1.0"

dependencies=[
  "pydantic ==2.6",
]

[project.optional-dependencies]
all =[
  "ruff==0.3.0",
  "mypy==1.9.0",
  "pre-commit==3.6.2",
  "pytest==8.1.1",
  "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.repo_name}} tests/ --cov-report html"
testpaths = "tests/"

[tool.mypy]
files="{{cookiecutter.repo_name}},tests"

#Used to silence errors from untyped 3rd party libraries.
#It's possible to do this on a per library basis and
#still check this package. Configure that later if desired
ignore_missing_imports=true

plugins = "pydantic.mypy"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true